--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,10 +25,10 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     implementation project(path: ':bracer')
-//    implementation 'com.github.ssseasonnn:Bracer:1.0.1'
+//    implementation 'com.github.ssseasonnn:Bracer:1.0.2'
     testImplementation 'junit:junit:4.12'
 }
