--- a/bracer/build.gradle
+++ b/bracer/build.gradle
@@ -18,8 +18,8 @@ android {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'com.google.code.gson:gson:2.8.6'
+    api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    api "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+    api 'androidx.appcompat:appcompat:1.4.2'
+    api 'com.google.code.gson:gson:2.9.0'
 }
